--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ SOI/
 .vscode
 dump/
 *.download
+*.aspx
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1.html
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1.vp
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1_files/36097414-1b74-497e-aab0-5b56030a22a2-1623033814458.css
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1_files/f39803f7-df02-4169-93eb-7547fb8c961a-1623033814458.css
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1_files/include-1623033814458.css
+Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 2.vp
