--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 1_files/include-1623033814458.cs
 Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 2.vp
 Fatec/4 - Sem/**/*.xlsx
 *.chc
+Fatec/4 - Sem/ERP/Sábado - 06-11-2021-20211106_101505-Gravação de Reunião.mp4
