--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ Fatec/3 - Sem/ENG2/Atividades/Projeto/Prototype 2.vp
 Fatec/4 - Sem/**/*.xlsx
 *.chc
 Fatec/4 - Sem/ERP/Sábado - 06-11-2021-20211106_101505-Gravação de Reunião.mp4
+.tmp.driveupload/
+*.ova
+Fatec/TCC/DiagramaDeSequencia.asta
