Updating repo files

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ Fatec/4 - Sem/ERP/Sábado - 06-11-2021-20211106_101505-Gravação de Reunião.mp
 .tmp.driveupload/
 *.ova
 Fatec/TCC/DiagramaDeSequencia.asta
+Colegas/
