Adding some activities from 6º semester

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ Fatec/4 - Sem/ERP/Sábado - 06-11-2021-20211106_101505-Gravação de Reunião.mp
 *.ova
 Fatec/TCC/DiagramaDeSequencia.asta
 Colegas/
+*.dcm
